# MCP_FINAM

./: .env.example  .gitignore  .mcp-server-config.json  INSTALLATION_VISUALIZATION.md  LICENSE  PUBLISHING_GUIDE.md  QUICK_PUBLISH.md  QUICK_START_VISUALIZATION.md  README.md  VISUALIZATION_FIXES.md  VISUALIZATION_GUIDE.md  VISUALIZATION_README.md  generate_submission_fast.py  git.mcp-server-config.json  http.mcp-server-config.json  mcp_server.py  pyproject.toml  server.py  submission.csv
.cursor/ref/: kace.md  pypi-mcp.md
.cursor/rules/: architecture.mdc
finam_mcp/: __init__.py  server.py
src/: __main__.py
src/configs/: __init__.py  langchain.py
src/infrastructure/core/: client.py  finam_client.py
src/presentation/composition/di/providers/infrastructure/: finam_api_client.py
src/presentation/langchain/: callback.py  main.py
src/presentation/langchain/tools/: __init__.py  visualization.py
src/presentation/langchain/visualization/: __init__.py  performance.py  portfolio.py  rebalancing.py  trades.py  utils.py
src/presentation/mcp/: main.py
src/presentation/mcp/handlers/: __init__.py  client.py
test/: README.md  run_test.sh  test_openrouter.py
