[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finam-mcp"
version = "0.1.0"
description = "Finam MCP Server - Model Context Protocol server for Finam integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["mcp", "finam", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=0.19.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/finam-mcp"
Repository = "https://github.com/yourusername/finam-mcp"
Issues = "https://github.com/yourusername/finam-mcp/issues"

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
finam-mcp = "finam_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["finam_mcp"] 
