[project]
name = "finam-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "mcp[cli]>=1.16.0,<2.0.0",
    "structlog (>=25.4.0,<26.0.0)",
    "orjson (>=3.11.3,<4.0.0)",
    "dishka>=1.7.2",
    "streamlit>=1.50.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.34",
    "langchain-core>=0.3.78",
    "langchain-community>=0.3.30",
    "ddgs>=9.6.0",
    "langchain-mcp-adapters>=0.1.11",
    "langgraph>=0.6.8",
]
